--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
                         <li class="sidebar-search">
                             <!-- /input-group -->
                             <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
+                                <input type="text" class="form-control" placeholder="查找...">
                                 <span class="input-group-btn">
                                     <button class="btn btn-default" type="button">
                                         <i class="fa fa-search"></i>
@@ -194,6 +194,41 @@
                                 </span>
                             </div>
                         </li>
+                        <!-- My list -->
+                        <li>
+                            <a href="#"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;首页产品管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">首页产品</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-suitcase" aria-hidden="true"></i>&nbsp;产品管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">产品列表</a></li>
+                                <li><a href="#">新增AR产品/产品详情</a></li>
+                                <li><a href="#">新增视频产品/产品详情</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-server" aria-hidden="true"></i>&nbsp;类别管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">一级分类</a></li>
+                                <li><a href="#">二级分类</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;会员管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">会员列表</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;日志管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">下载日志</a></li>
+                            </ul>
+                        </li>
+
                         <li>
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
@@ -275,41 +310,6 @@
                                 <li>
                                     <a href="login.html">Login Page</a>
                                 </li>
-                            </ul>
-                        </li>
-
-                        <!-- My list -->
-                        <li>
-                            <a href="#"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;首页产品管理<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="#">首页产品</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-suitcase" aria-hidden="true"></i>&nbsp;产品管理<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="#">产品列表</a></li>
-                                <li><a href="#">新增AR产品/产品详情</a></li>
-                                <li><a href="#">新增视频产品/产品详情</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-server" aria-hidden="true"></i>&nbsp;类别管理<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="#">一级分类</a></li>
-                                <li><a href="#">二级分类</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;会员管理<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="#">会员列表</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;日志管理<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="#">下载日志</a></li>
                             </ul>
                         </li>
                     </ul>
