--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>趣味乐园</title>
 
     <!-- Bootstrap Core CSS -->
@@ -24,7 +23,122 @@
 </head>
 <body>
     <div id="wrapper">
-        <ng-include src="'app/views/common/navigation.html'"></ng-include>
+        <!--<ng-include src="'app/views/common/navigation.html'"></ng-include>-->
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+
+            <!-- /.navbar-header -->
+            <div class="navbar-header" id="nav-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">趣学乐园</a>
+            </div>
+
+            <!-- /.navbar-top-links -->
+            <ul class="nav navbar-top-links navbar-right" id="nav-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-envelope fa-fw"></i>
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-messages">
+                        <li>
+                            <a href="#">
+                                <div>
+                                    <strong>John Smith</strong>
+                                    <span class="pull-right text-muted"><em>Yesterday</em></span>
+                                </div>
+                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#">
+                                <div>
+                                    <strong>John Smith</strong>
+                                    <span class="pull-right text-muted"><em>Yesterday</em></span>
+                                </div>
+                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- /.dropdown-messages -->
+                </li>
+                <!-- /.dropdown -->
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                    <!-- /.dropdown-user -->
+                </li>
+            </ul>
+
+            <!-- /.navbar-static-side -->
+            <div class="navbar-default sidebar" role="navigation" id="nav-sidebar">
+                <div class="sidebar-nav navbar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li class="sidebar-search">
+                            <!-- /input-group -->
+                            <div class="input-group custom-search-form">
+                                <input type="text" class="form-control" placeholder="查找...">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="button">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                            </div>
+                        </li>
+                        <!-- My list -->
+                        <li>
+                            <a href="#"><i class="fa fa-home fa-fw"></i>&nbsp;首页产品管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li class="active"><a href="#primary_product">首页产品</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-suitcase fa-fw"></i>&nbsp;产品管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#product_list">产品列表</a></li>
+                                <li><a href="#new_ar_product_detail">新增AR产品/产品详情</a></li>
+                                <li><a href="#new_video_product_detail">新增视频产品/产品详情</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-server fa-fw"></i>&nbsp;类别管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#first_level_category">一级分类</a></li>
+                                <li><a href="#second_level_category">二级分类</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-users fa-fw"></i>&nbsp;会员管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#user_admin">会员列表</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-list-alt fa-fw"></i>&nbsp;日志管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#log_download">下载日志</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
         <div id="page-wrapper">
             <div ng-view></div>
         </div>
