Update sub feature pages

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>趣味乐园</title>
 
+
+
     <!-- Bootstrap Core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -19,6 +21,9 @@
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- DataTables Responsive CSS -->
     <link href="assets/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="">
+    <!--<intercept-url pattern="/favicon.ico" access="ROLE_ANONYMOUS" />-->
 
 </head>
 <body>
